[project]
name = "videotranscripter-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dotenv>=0.9.9",
    "ipykernel>=7.1.0",
    "langchain>=1.2.3",
    "langchain-groq>=1.1.1",
    "langgraph>=1.0.5",
    "langsmith>=0.6.2",
    "python-dotenv>=1.2.1",
    "typing-extensions>=4.15.0",
]
[tool.setuptools]
packages = ["Agent", "config", "logger", "exception", "prompt_library"]